updated website info

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Glad you asked. I'm a third year computer engineering student at the University of Utah. I also work with the IT team in charge of provisioning virtual servers across campus. When I'm not working or doing school I like to make electronic music. </p>
+   				<p class="lead">Glad you asked. I'm a senior computer engineering student at the University of Utah. I'm working towards my master's degree and will be graduating spring of 2023. When I'm not studying for school or working, I like to make electronic music. </p>
    			</div>   			
 
    		</div>   		
@@ -123,18 +123,18 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I'm currently an incoming SDE intern for Amazon this summer. However, I am looking for opportunites to work in the fall and following semesters.</p>
+   			<p>I'm currently finishing my last semester of undergrad and will be starting graduate school this spring. Right now I work with my University's IT team and am in charge of provisioning virtual servers across campus. </p>
 
    			<ul class="info-list">
    				<li>
 					<strong>Pursuing Degrees</strong>
-   					<span>- Computer Engineering BS</span>
+   					<span>- Computer Engineering BS/MS</span>
 					<span>- Honors Degree</span>
 					<span>- Music Tech Minor</span>
    				</li>
 				<li>
    					<strong>Expected Graduation</strong>
-					<span>- Spring 2022</span>
+					<span>- Spring 2023</span>
 				</li>
    				<li>
    					<strong>Current GPA - 3.5</strong>
@@ -157,7 +157,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>I have experience developing software programs and building electronics. I also work well with teams and am resilient when it comes to facing challenges (like debugging code).</p>
+   			<p>I have experience with software development and building electronics. I also work well with teams and am resilient when it comes to solving challenges (like debugging code).</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -194,7 +194,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Contact</a>
-   			<a href="./resume/Resume - Kidus Yohannes.pdf" title="Download CV" class="button button-primary">Resume</a>
+   			<a href="./resume/Kidus Resume.pdf" title="Download CV" class="button button-primary">Resume</a>
    		</div>   		
    	</div>
 
@@ -211,7 +211,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Most of my experience comes from projects I've done for school or work. However, I do have a few personal projects.</p>
+   			<p class="lead">Experience from my time working with companies and my own personal projects.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -235,8 +235,8 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>Aug 2018 - Apr 2022 
+	   					<h3>BS/MS Degree</h3>
+	   					<p>Aug 2018 - Apr 2023 
 						<br>Present
 						</p>
 	   				</div>
@@ -251,7 +251,10 @@
 						<br> - Computer Architecture and Design Laboratory
 						<br> - Digital Systems Design
 						<br> - Software Development I, II
+						<br> - Embedded Systems and Digital VLSI Design
 						<br> - Database Systems
+						<br> - Machine Learning
+						<br> - Computer Graphics
 						   
 						</p>
 	   				</div>
@@ -305,15 +308,32 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>VM Provisioner Intern</h3>
-	   					<p>July 2020 - Present</p>
+	   					<h3>Software Dev Engineer Intern</h3>
+	   					<p>May 2021 - Aug 2021</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>UIT | Hardware Platform Services</h4>
-	   					<p>I'm responsible for provisioning and maintaining campus/hospital virtual servers across campus. I assign the machines their network, backup information, and required storage. I help clients get their virtual machines setup to the point where they can install applications and manage them on their own.</p>
+	   					<h4>Amazon | Alexa Auto</h4>
+	   					<p>I worked directly with the Alexa Auto SDK. My project was to integrate hand gestures and facial recognition using machine learning as a way to navigate through the android application, interact with vehicle controls, and determine the user's identity.</p>
+						<p>While you're driving, it's easier to control the app by waving your hands instead of having to touch the screen. And in order to prevent unauthorized users from asking Alexa commands that might reveal sensitive data, Alexa can use facial recognition to determine who is speaking and prevent such a case.</p>
+						</div>
+
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>VM Provisioner Intern</h3>
+						<p>July 2020 - Present</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>UIT | Hardware Platform Services</h4>
+						<p>I'm responsible for provisioning and maintaining campus/hospital virtual servers across campus. I assign the machines their network, backup information, and required storage. I help clients get their virtual machines setup to the point where they can install applications and manage them on their own.</p>
 						<p>I work with vSphere, VRA, and Infoblox to deploy these custom virtual machines; assigning their IP addresses and adding them to the domain using active directory.</p>
-	   				</div>
+					</div>
 
 				<div class="timeline-block">
 
@@ -490,16 +510,11 @@
    	<div class="row portfolio-content">
 
 <div class="songs">
-<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/879770233&color=%2304546c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kiduce" title="Kiduce" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/kiduce/soybeano-wished-kiduce-remix" title="Soybeano - Wished (Kiduce Remix)" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
-<br>
-<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/896128102&color=%234c4d48&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kiduce" title="Kiduce" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/kiduce/mistrust-piano-cover" title="Mistrust (Piano Cover)" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
-<br>
-<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/866248000&color=%237ca7e7&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kiduce" title="Kiduce" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/kiduce/look" title="Look" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
-<br>
-<br>
-<iframe width="100%" height="600" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1015573480&color=%234c4d48&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soybeano" title="Soybeano" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/soybeano/sets/in-case-im-gone" title="In Case I&#x27;m Gone" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
-<br>
-<br>
+	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1128989284&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kiduce" title="Kiduce" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/kiduce/godhelpme-piano-cover" title="GODHELPME (Piano Cover)" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div><br>
+	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1082942515&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/hinabi-bloom" title="Hinabi Bloom" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/hinabi-bloom/bright" title="Bright" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>	<br>
+	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1055834587&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kiduce" title="Kiduce" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/kiduce/panda-eyes-not-a-love-song-kiduce-edit" title="Panda Eyes - Not A Love Song (Kiduce Edit)" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>	<br>
+	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1012819534&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kiduce" title="Kiduce" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/kiduce/her" title="Her" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div> <br> <br>
+	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1320070234&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soybeano" title="Soybeano" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/soybeano/sets/tanjoubi-5" title="Tanjoubi 5" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div><br>
 </div>
 
  
@@ -610,7 +625,7 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (801) 673 4053<br>
+   			<p>Phone: (801) xxx xxxx<br>
 			   </p>
 
    		</div>
