updated website info

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll"  href="#work" title="">Work</a></li>
+						<li><a class="smoothscroll"  href="#projects" title="">Projects</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Music</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>				
 					</ul>
@@ -75,7 +77,6 @@
 	   			<h1>I'm Kidus Yohannes</h1>
 
 	   			<p class="intro-position">
-					<span>Student</span>
 	   				<span>Computer Engineer</span>
 	   				<span>Music Producer</span> 
 	   			</p>
@@ -91,8 +92,8 @@
          <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/kidus-yohannes"><i class="fa fa-linkedin"></i></a></li>
          <li><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/MrYo531"><i class="fa fa-github"></i></a></li>
          <li><a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/MrYo531"><i class="fa fa-twitter"></i></a></li>
-         <li><a target="_blank" rel="noopener noreferrer" href="http://www.soundcloud.com/kiduce"><i class="fa fa-soundcloud"></i></a></li>
-         <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/kiducer"><i class="fa fa-instagram"></i></a></li>
+         <li><a target="_blank" rel="noopener noreferrer" href="http://www.soundcloud.com/KIDUCE"><i class="fa fa-soundcloud"></i></a></li>
+         <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/KIDUCEmusic"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -112,7 +113,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Glad you asked! I'm a graduate student studying computer engineering at the University of Utah. My interests are in computer graphics and logic synthesis. When I'm not working or studying for school, I like to make electronic music! </p>
+   				<p class="lead">Glad you asked! I'm a recent M.S. graduate from the University of Utah where I recieved my degree in Computer Engineering. My interests and skills are in machine learning, computer graphics, software development, and Verilog/FPGAs. When I'm not working or practicing my coding skills, I like to go running and make electronic music. </p>
    			</div>   			
 
    		</div>   		
@@ -123,14 +124,14 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I'm currently working at Intel as a Graphics Hardware Engineer Intern. I will graduate next year in the spring.</p>
+   			<p>I'm currently looking for a SDE or related position. Either remote or near Salt Lake City, where I'm located.</p>
 
    			<ul class="info-list">
    				<li>
 					<h3>Degrees</h3>
 					<strong>Computer Engineering MS</strong>
-					<span>- University of Utah, 4.0 GPA</span>
-					<span>- Jan 2022 | Apr 2023 </span>
+					<span>- University of Utah, 3.7 GPA</span>
+					<span>- Jan 2022 | Dec 2023 </span>
    					<strong>Computer Engineering BS</strong>
 					<span>- University of Utah, 3.5 GPA</span>
 					<span>- Aug 2018 | Dec 2021 </span>
@@ -142,7 +143,9 @@
    				</li>
    				<li>
    					<strong>Interested Positions:</strong>
-   					<span>- Software/Hardware Engineer</span>
+   					<span>- SDE/Hardware Engineer</span>
+					<span>- FPGA/Verilog Engineer</span>
+					<span>- ML/AI Engineer</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -156,7 +159,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>I have experience in software and hardware development. I work well with teams and am resilient when it comes to solving challenges.</p>
+   			<p>I have experience in software development and computer architecture. I work well with teams and am resilient when it comes to solving challenges.</p>
 
 				<ul class="skill-bars">
 					<li>
@@ -164,20 +167,20 @@
 						<strong>Python</strong>
 					</li>
 					<li>
-						<div class="progress percent90"><span>90%</span></div>
-						<strong>Java</strong>
+						<div class="progress percent80"><span>80%</span></div>
+						<strong>C++</strong>
 					</li>
 					<li>
 						<div class="progress percent85"><span>85%</span></div>
-						<strong>C#</strong>
+						<strong>Verilog</strong>
+					<li>
+						<div class="progress percent80"><span>80%</span></div>
+						<strong>Java</strong>
+					</li>
 					</li>
 						<li>
 						<div class="progress percent85"><span>85%</span></div>
-						<strong>Verilog</strong>
-					</li>
-					<li>
-						<div class="progress percent80"><span>80%</span></div>
-						<strong>C++</strong>
+						<strong>C#</strong>
 					</li>
 					<li>
 						<div class="progress percent80"><span>80%</span></div>
@@ -231,9 +234,9 @@
 					</div>
 
 					<div class="timeline-header">
-						<h3>BS/MS Degree</h3>
-						<p>Jan 2022 - Apr 2023 
-						<br> GPA - 4.0
+						<h3>MS Degree</h3>
+						<p>Jan 2022 - Dec 2023 
+						<br> GPA - 3.7
 					 <br>Present
 					 </p>
 					</div>
@@ -242,9 +245,15 @@
 						<h4>University of Utah</h4>
 						<p>Computer Engineering MS
 					 <br> Taken course work:
-					 <br> - Adv. Copmputer Graphics
+					 <br> - Adv. Computer Graphics
 					 <br> - Adv. Digital VLSI Design
 					 <br> - Quantum Computing
+					 <br> - Parallel Computing
+					 <br> - Adv. Computer Architecture
+					 <br> - CAD of Digital Circuits
+					 <br> - Image Processing
+					 <br> - Test/Verif of Digital Circuits
+					 <br> - Async Circuit Design
 						
 					 </p>
 					</div>
@@ -314,7 +323,7 @@
 
    	<div class="row resume-timeline">
 
-   		<div class="col-twelve resume-header">
+   		<div section id="work" class="col-twelve resume-header">
 
    			<h2>Work Experience</h2>
 
@@ -332,12 +341,12 @@
 
 					<div class="timeline-header">
 						<h3>Graphics Hardware Engineer Intern</h3>
-						<p>May 2022 - Aug 2022</p>
+						<p>May 2022 - July 2023</p>
 					</div>
 
 					<div class="timeline-content">
 						<h4>Intel | Xe Arch</h4>
-						<p>My project is to train a model to perform key frame selection using GPU rendering metrics/data. This also involves an autoencoder to classify the frame images as additional input for the key frame selection. The purpose of this tool is to approximate benchmarks and provide the ideal frames used to optimize performance. </p>
+						<p>My main project was to implement key frame selection using machine learning. This involved training a neural network (autoencoder) to abstract and classify GPU data (PPA metrics) and workload frame images. The purpose of this tool was to approximate benchmarks and provide the ideal frames for optimizing hardware performance. I also provided support in additional projects such as data collection, processing, visualization, web scraping, web development, and database management. </p>
 					 </div>
 
    				<div class="timeline-block">
@@ -354,7 +363,6 @@
 	   				<div class="timeline-content">
 	   					<h4>Amazon | Alexa Auto</h4>
 	   					<p>I worked directly with the Alexa Auto SDK. My project was to integrate hand gestures and facial recognition using machine learning as a way to navigate through the android application, interact with vehicle controls, and determine the user's identity.</p>
-						<p>While you're driving, it's easier to control the app by waving your hands instead of having to touch the screen. And in order to prevent unauthorized users from asking Alexa commands that might reveal sensitive data, Alexa can use facial recognition to determine who is speaking and prevent such a case.</p>
 						</div>
 
 				<div class="timeline-block">
@@ -370,8 +378,8 @@
 
 					<div class="timeline-content">
 						<h4>UIT | Hardware Platform Services</h4>
-						<p>I was responsible for provisioning and maintaining campus/hospital virtual servers across campus. I assigned the machines their network, backup information, and required storage. I helped clients get their virtual machines setup to the point where they can install applications and manage them on their own.</p>
-						<p>I worked with vSphere, VRA, and Infoblox to deploy these custom virtual machines; assigning their IP addresses and adding them to the domain using active directory.</p>
+						<p>I was responsible for provisioning and maintaining campus/hospital virtual servers across campus. I would handle the network, backup information, and required storage for each machine. I helped clients get their virtual machines setup to the point where they can install applications and manage them on their own.</p>
+						<p>I worked with vSphere, VRA, and Infoblox to deploy these custom virtual machines. Assigning their IP addresses and adding them to the domain using active directory. And working with a ticketing system to manage requests.</p>
 					</div>
 
 				<div class="timeline-block">
@@ -422,7 +430,7 @@
 	
 	<div class="row resume-timeline">
 
-   		<div class="col-twelve resume-header">
+   		<div section id="projects" class="col-twelve resume-header">
 
    			<h2>Projects</h2>
 
@@ -431,6 +439,25 @@
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
+
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-laptop"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>C</h3>
+						<p>Dec 2023</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/NathanNator/ECE6745_Final_Project">Verification of Polynomial Division</a></h4>
+						<p> I used the CUDD package to represent circuits as polynomial ZDDs and verified polynomial division using gröbner basis reductions.
+					 </p>
+					</div>
+
+				</div> <!-- /timeline-block -->
 
 				<div class="timeline-block">
 
@@ -730,7 +757,7 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright 2022</span>
+		        	<span>© Copyright 2024</span>
 		         </div>		                  
 	      	</div>
 
