--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Glad you asked! I'm a recent M.S. graduate from the University of Utah where I recieved my degree in Computer Engineering. My interests and skills are in machine learning, computer graphics, software development, and Verilog/FPGAs. When I'm not working or practicing my coding skills, I like to go running and make electronic music. </p>
+   				<p class="lead">Glad you asked! I'm a recent M.S. graduate from the University of Utah where I received my degree in Computer Engineering. My interests and skills are in machine learning, computer graphics, software development, and Verilog/FPGAs. When I'm not working or practicing my coding skills, I enjoy running and making electronic music.</p>
    			</div>   			
 
    		</div>   		
@@ -124,7 +124,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I'm currently looking for a SDE or related position. Either remote or near Salt Lake City, where I'm located.</p>
+   			<p>I'm currently looking for an SDE or related position. Either remote or near Salt Lake City where I'm located.</p>
 
    			<ul class="info-list">
    				<li>
@@ -362,7 +362,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Amazon | Alexa Auto</h4>
-	   					<p>I worked directly with the Alexa Auto SDK. My project was to integrate hand gestures and facial recognition using machine learning as a way to navigate through the android application, interact with vehicle controls, and determine the user's identity.</p>
+	   					<p>I worked directly with the Alexa Auto SDK. My project was to integrate hand gestures and facial recognition using machine learning as a way to navigate through the Android application, interact with vehicle controls, and determine the user's identity.</p>
 						</div>
 
 				<div class="timeline-block">
@@ -378,7 +378,7 @@
 
 					<div class="timeline-content">
 						<h4>UIT | Hardware Platform Services</h4>
-						<p>I was responsible for provisioning and maintaining campus/hospital virtual servers across campus. I would handle the network, backup information, and required storage for each machine. I helped clients get their virtual machines setup to the point where they can install applications and manage them on their own.</p>
+						<p>I was responsible for provisioning and maintaining campus/hospital virtual servers across campus. I would handle the network, backup information, and required storage for each machine. I helped clients get their virtual machines set up to the point where they could install applications and manage them on their own.</p>
 						<p>I worked with vSphere, VRA, and Infoblox to deploy these custom virtual machines. Assigning their IP addresses and adding them to the domain using active directory. And working with a ticketing system to manage requests.</p>
 					</div>
 
@@ -395,7 +395,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>FedEx</h4>
-	   					<p>I would carry and stack large mail packages in huge trucks. Packages would weigh up to 75lbs. Simple manual labor.</p>
+	   					<p>I would carry and stack large mail packages in huge trucks. Packages would weigh up to 75 lbs. Simple manual labor.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -415,7 +415,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>University of Utah | Bowling Alley</h4>
-	   					<p> I was in charge of managing the bowling machines, cash register, and other recreation services. Helped customers with questions and manage large social events.</p>
+	   					<p> I was in charge of managing the bowling machines, cash register, and other recreation services. Helped customers with questions and managed large social events.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -491,7 +491,7 @@
 
 					<div class="timeline-content">
 						<h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/MrYo531/music-bot">Discord Music Bot</a></h4>
-						<p> A Discord bot that plays that plays songs from YouTube or SoundCloud through the voice channel. I used Python and Discord’s API to code the bot from scratch. You can find instructions on how to install and use the bot on the github.
+						<p> A Discord bot that plays that plays songs from YouTube or SoundCloud through the voice channel. I used Python and Discord’s API to code the bot from scratch. You can find instructions on how to install and use the bot on GitHub.
 					 </p>
 					</div>
 
@@ -546,7 +546,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4><a target="_blank" rel="noopener noreferrer" href="https://github.com/MrYo531/waterme">WaterTrack (beta)</a></h4>
-	   					<p>Created an IOS app that tracks users daily water intake. Water intake over time is then stored using SQLite. The data over time is then shown on a graph.
+	   					<p>Created an IOS app that tracks users' daily water intake. Water intake over time is then stored using SQLite. The data over time is then shown on a graph.
 						</p>
 	   				</div>
 
@@ -566,7 +566,7 @@
 	   				<div class="timeline-content">
 	   					<h4>TankWars</h4>
 	   					<p>Built an online multiplayer game that involved a client-server architecture and used SQL to manage a database for tracking high scores, usernames, and other relevant game statistics.
-						I also visualized the data using ChartJS, an open source JavaScript chart library.
+						I also visualized the data using ChartJS, an open-source JavaScript chart library.
 						</p>
 	   				</div>
 
@@ -583,7 +583,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Spreadsheet</h4>
-	   					<p>Using the MVC design, I coded a spreadsheet from scratch. Each major component to the design was broken down individually and then brought together for the final product. A dependency graph to track spreadsheet cell dependencies. A formula evaluator that implements multi-threading to quickly evaluate multiple large and complex equations. A clean graphic user interface with a feature to adjust the text font and color.
+	   					<p>Using the MVC design, I coded a spreadsheet from scratch. Each major component of the design was broken down individually and then brought together for the final product. A dependency graph to track spreadsheet cell dependencies. A formula evaluator that implements multi-threading to quickly evaluate multiple large and complex equations. A clean graphic user interface with a feature to adjust the text font and color.
 						</p>
 	   				</div>
 
