--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Welcome | Kidus Yohannes</title>
-	<meta name="description" content="">  
-	<meta name="author" content="">
+	<meta name="description" content="Kidus's Portfolio">  
+	<meta name="author" content="Kidus Yohannes">
 
    <!-- mobile specific metas
    ================================================== -->
@@ -19,12 +19,13 @@
    ================================================== -->
    <link rel="stylesheet" href="css/base.css">  
    <link rel="stylesheet" href="css/main.css">
-   <link rel="stylesheet" href="css/vendor.css">     
+   <link rel="stylesheet" href="css/vendor.css"> 
 
    <!-- script
    ================================================== -->   
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
+	<script src="https://kit.fontawesome.com/8edddc5b5a.js" crossorigin="anonymous"></script>
 
    <!-- favicons
 	================================================== -->
@@ -57,7 +58,7 @@
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>				
 					</ul>
 				</nav>    		
-   		</div> <!-- /top-bar --> 
+   		</div> <!-- /top-bar --> 	
    		
    	</div> <!-- /row --> 		
    </header> <!-- /header -->
@@ -89,11 +90,11 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/kidus-yohannes"><i class="fa fa-linkedin"></i></a></li>
-         <li><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/MrYo531"><i class="fa fa-github"></i></a></li>
-         <li><a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/MrYo531"><i class="fa fa-twitter"></i></a></li>
-         <li><a target="_blank" rel="noopener noreferrer" href="http://www.soundcloud.com/KIDUCE"><i class="fa fa-soundcloud"></i></a></li>
-         <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/KIDUCEmusic"><i class="fa fa-instagram"></i></a></li>
+         <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/kidus-yohannes"><i class="fa fa-linkedin fa-lg"></i></a></li>
+         <li><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/MrYo531"><i class="fa fa-github fa-lg"></i></a></li>
+         <li><a target="_blank" rel="noopener noreferrer" href="https://www.hackerrank.com/profile/mryo531"><i class="fa-brands fa-hackerrank fa-lg"></i></a></li>
+         <li><a target="_blank" rel="noopener noreferrer" href="http://www.soundcloud.com/KIDUCE"><i class="fa fa-soundcloud fa-lg"></i></a></li>
+         <li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/KIDUCEmusic"><i class="fa fa-instagram fa-lg"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -373,7 +374,7 @@
 
 					<div class="timeline-header">
 						<h3>VM Provisioner Intern</h3>
-						<p>July 2020 - May 2022</p>
+						<p>June 2020 - May 2022</p>
 					</div>
 
 					<div class="timeline-content">
@@ -699,8 +700,7 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1122 Donnor Way<br>
-            Salt Lake City, UT 84108<br>
+            Salt Lake City, UT<br>
             </p>
 
    		</div>
@@ -746,11 +746,11 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-					<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/kidus-yohannes"><i class="fa fa-linkedin"></i></a></li>
-					<li><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/MrYo531"><i class="fa fa-github"></i></a></li>
-					<li><a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/MrYo531"><i class="fa fa-twitter"></i></a></li>
-					<li><a target="_blank" rel="noopener noreferrer" href="http://www.soundcloud.com/kiduce"><i class="fa fa-soundcloud"></i></a></li>
-					<li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/kiducemusic"><i class="fa fa-instagram"></i></a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/kidus-yohannes"><i class="fa fa-linkedin  fa-lg"></i></a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/MrYo531"><i class="fa fa-github  fa-lg"></i></a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="https://www.hackerrank.com/profile/mryo531"><i class="fa-brands fa-hackerrank fa-lg"></i></a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="http://www.soundcloud.com/kiduce"><i class="fa fa-soundcloud  fa-lg"></i></a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/kiducemusic"><i class="fa fa-instagram fa-lg"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
